Alignment fix for the branch buttons / leaf icons in hierarchical cocktail.ui.Table elements

--- a/cocktail/ui/resources/styles/cocktail-ui-table.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-table.scss
@@ -188,6 +188,7 @@ $cell-padding: 0.6em;
 
     .rowExpanderIcon,
     .emptyRowIcon {
+        font-size: 1em;
         margin-right: 0.5em;
         margin-left: calc(#{$cell-padding} + var(--depth) * 2em);
 
